--- a/index.css
+++ b/index.css
@@ -1,6 +1,5 @@
 #carouselExampleCaptions {
     width: 100%;
-    margin: 5px;
 }
 
 .carousel-control-prev-icon {
@@ -33,6 +32,8 @@
 
 #footer {
     padding: 5px;
+    color: white;
+    margin: auto;
 }
 
 .card-title {
@@ -51,4 +52,35 @@
 
 .btn {
     margin: 3px;
+}
+
+.font-effect-outline {
+    font-size: xx-large;
+}
+
+#carousel {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 40px;
+    margin-bottom: 20px;
+}
+
+.card {
+    width: 100%; 
+    height: 98%;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+#brand-logo {
+    height: 40px; 
+    width: auto; 
+    border-radius: 0px 5px 0px 5px;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+.navbar-toggler {
+    margin-top: auto;
+    margin-bottom: auto;
 }
